objects/SubProjectOpp__c.object
<CustomObject>
    <description>Junction object to allow associating multiple Opportunities with a SubProject.</description>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SubProjects</relationshipLabel>
        <relationshipName>SubProjectOpps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>SubProjectOpps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubProject_Name__c</fullName>
        <formula>SubProject__r.SubProject_Name__c</formula>
        <label>SubProject Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject__c</fullName>
        <label>SubProject</label>
        <referenceTo>SubProject__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>SubProjectOpps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SubProjectOpp</label>
    <nameField>
        <displayFormat>SPO-{00000000}</displayFormat>
        <label>SubProjectOpp ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SubProjectOpps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>